Fixes #6; Prevent overlap of map control panels

--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -64,7 +64,11 @@
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   left: 80px; 
-  width: 320px;
+  width: 330px;
+  max-height: calc(100vh - 180px);
+  scrollbar-gutter: stable;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 #thin-input > .form-group {
@@ -103,6 +107,11 @@
   max-height: 500px;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.leaflet-control-layers-expanded {
+  max-height: calc(100vh - 260px);
+  overflow-y: auto;
 }
 
 .tooltip-inner {
